Bug 1391733 - Update telemetry to provide information about e10s incompatible jaws usage. r=surkov, a=gchang